# parakeet-streaming

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: server.md
docs/client/python/: example.md  hello.md  quickstart.md
docs/client/typescript/: hello.md  quickstart.md
parakeet/: __init__.py  cli.py  config.py  model.py  profiler.py  server.py
parakeet/engine/: __init__.py  asr_engine.py  model_runner.py  scheduler.py  sequence.py  turn_detection.py
parakeet/kernels/: __init__.py  packing.py  paged_attention.py  paged_kv.py
parakeet/model/: attention.py  config.py  convolution.py  decoder.py  encoder.py  feature_extractor.py  feedforward.py  generation.py  modeling_parakeet.py  naive_cache.py  subsample.py  tokenizer.py
parakeet/modules/: __init__.py  attention.py  cache.py  convolution.py  decoder.py  encoder.py  feature_extractor.py  feedforward.py  sample.py  subsample.py  tokenizer.py
scratchpad/: asr_engine_demo.py  feat_demo.py  offline_demo.py  stream_demo.py
test-ts/: .gitignore  index.html  package.json  test-ws.ts  test.ts
